<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        style="@style/Toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/indent_8dp"
        android:layout_marginBottom="@dimen/indent_8dp"
        android:layout_marginStart="@dimen/indent_16dp"
        android:layout_marginEnd="@dimen/indent_16dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_toolbar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_sex"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_8dp"
                android:hint="@string/hint_sex"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_name">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_textview_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/content_profile_current_height" />

            <include layout="@layout/content_profile_current_weight" />

            <TextView
                android:id="@+id/imt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_16dp"
                android:textSize="@dimen/size_18sp"
                android:text="@string/text_imt"
                app:layout_constraintStart_toStartOf="@+id/til_sex"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <TextView
                android:id="@+id/tv_imt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_22sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/til_sex"
                app:layout_constraintTop_toTopOf="@+id/imt"
                tools:text="50" />

            <Button
                android:id="@+id/btn_create_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/indent_16dp"
                android:background="@drawable/button_border"
                android:text="@string/btn_create_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_edit_profile"
                app:layout_constraintTop_toBottomOf="@+id/imt" />

            <Button
                android:id="@+id/btn_edit_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_border"
                android:text="@string/btn_edit_profile"
                app:layout_constraintEnd_toStartOf="@+id/btn_create_profile"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>