<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/choose_dialog_gradient"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/indent_8dp">
        <ImageView
            android:id="@+id/iv_choose_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/indent_16dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/indent_16dp"
            android:text="@string/text_choose_app"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/indent_16dp"
        android:layout_marginTop="@dimen/indent_4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/indent_16dp"
            android:layout_marginRight="@dimen/indent_16dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/indent_8dp"
            android:paddingRight="@dimen/indent_8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/camera_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_camera_app"
                android:textColor="@color/white"
                android:textSize="@dimen/size_18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent_16dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/indent_8dp"
            android:paddingRight="@dimen/indent_8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/gallery_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_gallery_app"
                android:textColor="@color/white"
                android:textSize="@dimen/size_18sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>